# Textra-with-RCS-and-spam-block

./: .gitignore  CHANGELOG.md  IMESSAGE_PORT_PLAN.md  PLAN.md  PROJECT_STATUS.md  RCS_TRANSPORT_RESEARCH.md  README.md  build.sh  pairip_capture.js
TextRCS Integration Kit/: Guide 1 - Adding the Messaging Engine.txt  Guide 2 - Rounded-Corner Slide Animation.txt  Guide 3 - Wiring the Engine into Your App.txt  Instructions for the AI.md  Read Me First - give to Claude.txt
TextRCS Integration Kit/Files to Add to Your App/: ConvoCornerAnim.kt
TextRCS Integration Kit/messaging-engine-rust/: .gitignore  CHANGELOG.md  Cargo.toml  PHASE_9_WIRING.md  README.md  build.rs  build.sh
TextRCS Integration Kit/messaging-engine-rust/src/: auth.rs  client.rs  error.rs  events.rs  ffi.rs  http.rs  lib.rs  longpoll.rs  media.rs  methods.rs  pair.rs  pair_google.rs  pblite.rs  session.rs  uniffi_pair.rs  util.rs
TextRCS Integration Kit/messaging-engine-rust/src/crypto/: aesctr.rs  aesgcm.rs  ecdsa.rs  generate.rs  hkdf.rs  mod.rs
TextRCS Integration Kit/messaging-engine-rust/src/spam/: feeds.rs  mod.rs  online.rs  store.rs
diag-tools/frida/: anim_trace.js  anim_trace_alt_keepalive.sh  frida_runner.py
diag-tools/runtime-diff/: README.md
diag-tools/runtime-diff/go-ref/: go.mod  main.go
diag-tools/runtime-diff/kt-ref/: Main.kt
docs/: ANIMATION_TODO.md  APP_NOTES.md  AUDIT_REPORT.md  GITHUB_PUBLISH_README_JOURNAL.md  IMAGE_MORPH_PLAN.md  IMAGE_MORPH_TEST.md  RECEIVE_PIPELINE.md  SCAM_SPAM_PROTECTION_PLAN.md  WAKE_ON_NOTIFICATION_PLAN.md
inject_src/protocol/: GMessagesConstants.kt
inject_src/uniffi/textrcs_libgm/: textrcs_libgm.kt
textra_base/: AndroidManifest.xml  apktool.yml
textra_base/assets/dexopt/: baseline.prof  baseline.profm
textra_base/original/: AndroidManifest.xml
textra_base/res/anim/: button_state_list_anim_material.xml  fade_in.xml  fade_in_slow.xml  fade_out.xml  fade_out_slow.xml  intro_welcome_list.xml  intro_welcome_list_item.xml  slide_in_from_right_and_fade.xml  slide_out_to_right_and_fade.xml  stay_still.xml  textrcs_overlay_enter.xml  textrcs_overlay_exit.xml  textrcs_overlay_partial_enter.xml  textrcs_overlay_partial_exit.xml  toast_text.xml
textra_base/res/color/: actionbar_item_background.xml  android_primary_text_material_dark.xml  android_primary_text_material_light.xml  android_ripple_material_dark.xml  android_secondary_text_material_dark.xml  android_secondary_text_material_light.xml  text_dark_gray_disableable.xml  text_dark_gray_disableable_dark.xml  text_dark_gray_selectable.xml  text_dark_gray_selectable_dark.xml
textra_base/res/drawable/: $bot_photo__0.xml  $bot_photo__1.xml  $bot_photo__10.xml  $bot_photo__2.xml  $bot_photo__3.xml  $bot_photo__4.xml  $bot_photo__5.xml  $bot_photo__6.xml  $bot_photo__7.xml  $bot_photo__8.xml  $bot_photo__9.xml  bg_intro.xml  bg_radius_border.xml  bot_photo.xml  bubble_lock.xml  bubble_outgoing_delivery_indicator_queued.xml  common_cab_checkbox.xml  common_drawermenu_background.xml  common_drawermenu_item_selected.xml  common_item_background.xml  (+131 more)
textra_base/res/drawable-anydpi/: icon_adaptive_108_ff000000.xml  icon_adaptive_108_ff004d40.xml  icon_adaptive_108_ff006064.xml  icon_adaptive_108_ff00695c.xml  icon_adaptive_108_ff00796b.xml  icon_adaptive_108_ff00838f.xml  icon_adaptive_108_ff00897b.xml  icon_adaptive_108_ff0091ea.xml  icon_adaptive_108_ff009688.xml  icon_adaptive_108_ff0097a7.xml  icon_adaptive_108_ff00acc1.xml  icon_adaptive_108_ff00b0ff.xml  icon_adaptive_108_ff00b8d4.xml  icon_adaptive_108_ff00bcd4.xml  icon_adaptive_108_ff00bfa5.xml  icon_adaptive_108_ff00c853.xml  icon_adaptive_108_ff00e5ff.xml  icon_adaptive_108_ff00e676.xml  icon_adaptive_108_ff01579b.xml  icon_adaptive_108_ff0277bd.xml  icon_adaptive_108_ff0288d1.xml  icon_adaptive_108_ff039be5.xml  icon_adaptive_108_ff03a9f4.xml  icon_adaptive_108_ff0d47a1.xml  icon_adaptive_108_ff1565c0.xml  icon_adaptive_108_ff18ffff.xml  icon_adaptive_108_ff1976d2.xml  icon_adaptive_108_ff1a237e.xml  icon_adaptive_108_ff1b5e20.xml  icon_adaptive_108_ff1de9b6.xml  icon_adaptive_108_ff1e88e5.xml  icon_adaptive_108_ff212121.xml  icon_adaptive_108_ff2196f3.xml  icon_adaptive_108_ff263238.xml  icon_adaptive_108_ff26a69a.xml  icon_adaptive_108_ff26c6da.xml  icon_adaptive_108_ff283593.xml  icon_adaptive_108_ff2962ff.xml  icon_adaptive_108_ff2979ff.xml  icon_adaptive_108_ff29b6f6.xml  (+520 more)
textra_base/res/drawable-xxhdpi/: tappx_privacy_button_background.xml
(+24631 files in other folders)
